--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection" : "Server=.\\SQLExpress;Database=SuperHeroDb;Trusted_Connection=true;TrustServerCertificate=true;"
+        "DefaultConnection": "Server=localhost;Database=SuperHeroDb;Trusted_Connection=True;Encrypt=False"
     },
 
     "Logging": {
